--- a/backend/.env
+++ b/backend/.env
@@ -2,7 +2,7 @@ MONGO_URI = mongodb+srv://root:root@cluster0.dsgfu.mongodb.net/uptask?retryWrite
 
 JWT_SECRET = palabraSECRETA
 
-FRONTEND_URL = http://127.0.0.1:5173
+FRONTEND_URL = http://54.165.185.226/
 
 EMAIL_USER = 2d297b3e60d340
 EMAIL_PASS = 9e35eb714c8b98
