añadimos las urls

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,7 @@
 MONGO_URI = mongodb+srv://root:root@cluster0.dsgfu.mongodb.net/uptask?retryWrites=true&w=majority
 
+BASE_URL = http://localhost:4000
 
+FRONTEND_URL = http://localhost:4000
 
 
